Modified Class table
