# api/user.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	db "Gym-backend/db/sqlc"
+	"Gym-backend/service"
 	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/lib/pq"
@@ -110,52 +111,39 @@ func (server *Server) getUser(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, rsp)
 }
 
-//type loginUserRequest struct {
-//	Username string `json:"username" binding:"required,alphanum"`
-//	Password string `json:"password" binding:"required,min=6"`
-//}
-//
-//type loginUserResponse struct {
-//	AccessToken string       `json:"access_token"`
-//	User        userResponse `json:"user"`
-//}
+type loginRequest struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required,min=6"`
+}
 
-//
-//func (server *Server) loginUser(ctx *gin.Context) {
-//	var req loginUserRequest
-//	if err := ctx.ShouldBindJSON(&req); err != nil {
-//		ctx.JSON(http.StatusBadRequest, errorResponse(err))
-//		return
-//	}
-//
-//	user, err := server.store.GetUser(ctx, req.Username)
-//	if err != nil {
-//		if err == sql.ErrNoRows {
-//			ctx.JSON(http.StatusNotFound, errorResponse(err))
-//			return
-//		}
-//		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
-//		return
-//	}
-//
-//	err = util.CheckPassword(req.Password, user.HashedPassword)
-//	if err != nil {
-//		ctx.JSON(http.StatusUnauthorized, errorResponse(err))
-//		return
-//	}
-//
-//	accessToken, err := server.tokenMaker.CreateToken(
-//		user.Username,
-//		server.config.AccessTokenDuration,
-//	)
-//	if err != nil {
-//		ctx.JSON(http.StatusInternalServerError, errorResponse(err))
-//		return
-//	}
-//
-//	rsp := loginUserResponse{
-//		AccessToken: accessToken,
-//		User:        newUserResponse(user),
-//	}
-//	ctx.JSON(http.StatusOK, rsp)
-//}
+type loginResponse struct {
+	Type   string `json:"type"`
+	Error  string `json:"error"`
+	Object string `json:"object"`
+}
+
+// CreateTags		godoc
+// @Summary			Validate login Request
+// @Description 	Validate login Request and return corresponding object.
+// @Param 			login body loginRequest true "Valid User/Employee"
+// @Produce 		application/json
+// @Tags 			auth
+// @Success 		200 {object} loginResponse{}
+// @Router			/login [post]
+func (server *Server) loginUser(ctx *gin.Context) {
+	var req loginRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		ctx.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	validate, objecttype, obj := service.ValidateUser(ctx, req.Email, req.Password, server.store)
+
+	rsp := loginResponse{
+		Type:   objecttype,
+		Error:  validate,
+		Object: obj,
+	}
+
+	ctx.JSON(http.StatusOK, rsp)
+}
